# ap-move-light-to-data

./: LICENSE  MANIFEST.in  Makefile  README.md  TEST_PLAN.md  pyproject.toml  requirements.txt
.github/workflows/: format.yml  lint.yml  test.yml  typecheck.yml
ap_move_light_to_data/: __init__.py  __main__.py  config.py  matching.py  move_lights_to_data.py
ap_move_lights_to_data/: __init__.py  __main__.py  config.py  matching.py  move_lights_to_data.py
tests/: __init__.py  test_config.py  test_integration_move_lights_to_data.py  test_matching.py  test_move_lights_to_data.py
